--- a/Practice_BoilerPlate/8.4.0/angular/src/app/enrollment/create-enrollment/create-enrollment-dialog.component.html
+++ b/Practice_BoilerPlate/8.4.0/angular/src/app/enrollment/create-enrollment/create-enrollment-dialog.component.html
@@ -11,22 +11,42 @@
 
   <div class="modal-body">
     <!-- Teacher Dropdown -->
+    <!-- Course Multi-Select Dropdown -->
+    <!-- <div class="form-group row required">
+    <label class="col-md-3 col-form-label" for="courseIds">
+      {{ "Courses" | localize }}
+    </label>
+    <div class="col-md-9">
+      <select
+        multiple
+        class="form-control"
+        id="courseIds"
+        name="courseIds"
+        required
+        [(ngModel)]="enrollment.courseIds"
+      >
+        <option *ngFor="let course of courses" [ngValue]="course.id">
+          {{ course.name }}
+        </option>
+      </select>
+    </div>
+  </div> -->
     <div class="form-group row required">
-      <label class="col-md-3 col-form-label" for="CourseId">
-        {{ "Course" | localize }}
+      <label class="col-md-3 col-form-label" for="courseIds">
+        {{ "Courses" | localize }}
       </label>
       <div class="col-md-9">
-        <select
-          class="form-control"
-          id="courseId"
-          name="courseId"
-          required
-          [(ngModel)]="enrollment.courseId"
+        <p-multiSelect
+          [options]="courses"
+          [(ngModel)]="enrollment.courseIds"
+          optionLabel="name"
+          optionValue="id"
+          display="chip"
+          defaultLabel="Select Courses"
+          name="courseIds"
+          class="w-100"
         >
-          <option *ngFor="let course of courses" [value]="course.id">
-            {{ course.name }}
-          </option>
-        </select>
+        </p-multiSelect>
       </div>
     </div>
 
