--- a/Practice_BoilerPlate/8.4.0/angular/src/app/fileupload/create-fileupload/create-fileupload-dialog.component.html
+++ b/Practice_BoilerPlate/8.4.0/angular/src/app/fileupload/create-fileupload/create-fileupload-dialog.component.html
@@ -5,7 +5,7 @@
   (ngSubmit)="save()"
 >
   <abp-modal-header
-    [title]="'CreateNewDepartment' | localize"
+    [title]="'UploadFile' | localize"
     (onCloseClick)="bsModalRef.hide()"
   ></abp-modal-header>
  
