--- a/Practice_BoilerPlate/8.4.0/angular/src/app/department/department.component.html
+++ b/Practice_BoilerPlate/8.4.0/angular/src/app/department/department.component.html
@@ -117,9 +117,42 @@
             <table class="table table-striped table-bordered" [busy]="isTableLoading">
               <thead class="bg-light">
                 <tr>
-                  <th>{{ "Name" | localize }}</th>
-                  <th>{{ "Code" | localize }}</th>
-                  <th>{{ "Description" | localize }}</th>
+                  <th (click)="changeSorting('name')" style="cursor: pointer;">
+                    {{ "Name" | localize }}
+                    <i
+                      class="ml-1 fas"
+                      [ngClass]="{
+                        'fa-arrow-up text-primary': sorting === 'name asc',
+                        'fa-arrow-down text-primary': sorting === 'name desc',
+                        'fa-sort text-muted': sorting !== 'name asc' && sorting !== 'name desc'
+                      }"
+                    ></i>
+                  </th>
+                  
+                  
+                  
+                  <th (click)="changeSorting('name')" style="cursor: pointer;">
+                    {{ "Code" | localize }}
+                    <i
+                      class="ml-1 fas"
+                      [ngClass]="{
+                        'fa-arrow-up text-primary': sorting === 'name asc',
+                        'fa-arrow-down text-primary': sorting === 'name desc',
+                        'fa-sort text-muted': sorting !== 'name asc' && sorting !== 'name desc'
+                      }"
+                    ></i>
+                  </th>
+                  <th (click)="changeSorting('name')" style="cursor: pointer;">
+                    {{ "Description" | localize }}
+                    <i
+                      class="ml-1 fas"
+                      [ngClass]="{
+                        'fa-arrow-up text-primary': sorting === 'name asc',
+                        'fa-arrow-down text-primary': sorting === 'name desc',
+                        'fa-sort text-muted': sorting !== 'name asc' && sorting !== 'name desc'
+                      }"
+                    ></i>
+                  </th>
                   <!-- <th>{{ "IsActive" | localize }}</th> -->
                   <th style="width: 310px;">{{ "Actions" | localize }}</th>
                 </tr>
