--- a/Practice_BoilerPlate/8.4.0/angular/src/app/bed/bed.component.html
+++ b/Practice_BoilerPlate/8.4.0/angular/src/app/bed/bed.component.html
@@ -1,211 +1,147 @@
 <div [@routerTransition]>
-    <section class="content-header">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-6">
-            <h1>{{ "Beds" | localize }}</h1>
-          </div>
-          <div class="col-6 text-right">
-            <a href="javascript:;" class="btn bg-blue" (click)="createBed()">
-              <i class="fa fa-plus-square"></i>
-              {{ "Create" | localize }}
-            </a>
-          </div>
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-6">
+          <h1>{{ "Beds" | localize }}</h1>
+        </div>
+        <div class="col-6 text-right">
+          <a href="javascript:;" class="btn bg-blue" (click)="createBed()">
+            <i class="fa fa-plus-square"></i>
+            {{ "CreateNewBed" | localize }}
+          </a>
         </div>
       </div>
-    </section>
-  
-    <section class="content px-2">
-      <div class="container-fluid">
-        <div class="card">
-          <div class="card-header">
-            <div class="row">
-              <div class="col-md-6">&emsp;</div>
-              <div class="col-md-6">
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <button type="button" class="btn bg-blue" (click)="getDataPage(1)">
-                      <i class="fas fa-search"></i>
-                    </button>
-                  </div>
+    </div>
+  </section>
+
+  <section class="content px-2">
+    <div class="container-fluid">
+      <!-- Tabs -->
+      <ul class="nav nav-tabs mb-3">
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="activeTab === 'list'" (click)="activeTab = 'list'">
+            {{ "BedList" | localize }}
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="activeTab === 'status'" (click)="activeTab = 'status'">
+            {{ "BedStatusChart" | localize }}
+          </a>
+        </li>
+      </ul>
+
+      <!-- Tab 1: Bed List -->
+      <div *ngIf="activeTab === 'list'">
+
+        <!-- Filters -->
+        <div class="card mb-3">
+          <div class="card-body">
+            <form (ngSubmit)="getDataPage(1)">
+              <div class="form-row">
+                <div class="col-md-4">
                   <input
                     type="text"
                     class="form-control"
-                    name="keyword"
-                    [placeholder]="'SearchWithThreeDot' | localize"
+                    placeholder="{{ 'SearchKeyword' | localize }}"
                     [(ngModel)]="keyword"
-                    (keyup.enter)="getDataPage(1)"
+                    name="keyword"
                   />
-                  <div class="input-group-append">
-                    <button type="button" class="btn btn-default" (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                      <i class="fas" [class.fa-angle-up]="advancedFiltersVisible" [class.fa-angle-down]="!advancedFiltersVisible"></i>
+                </div>
+                <div class="col-md-2">
+                  <select class="form-control" [(ngModel)]="isActive" name="isActive">
+                    <option [ngValue]="null">{{ "All" | localize }}</option>
+                    <option [ngValue]="true">{{ "Active" | localize }}</option>
+                    <option [ngValue]="false">{{ "Inactive" | localize }}</option>
+                  </select>
+                </div>
+                <div class="col-md-2">
+                  <button type="submit" class="btn btn-primary">
+                    <i class="fa fa-search"></i> {{ "Search" | localize }}
+                  </button>
+                </div>
+                <div class="col-md-2">
+                  <button type="button" class="btn btn-secondary" (click)="clearFilters()">
+                    <i class="fa fa-times"></i> {{ "Clear" | localize }}
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <!-- Bed Table -->
+        <div class="card">
+          <div class="card-body table-responsive">
+            <table class="table table-bordered table-hover">
+              <thead>
+                <tr>
+                  <th (click)="changeSorting('bedNumber')" style="cursor:pointer">
+                    {{ "Bed Number" | localize }}
+                  </th>
+                  <th (click)="changeSorting('type')" style="cursor:pointer">
+                    {{ "Type" | localize }}
+                  </th>
+                  <th (click)="changeSorting('status')" style="cursor:pointer">
+                    {{ "Status" | localize }}
+                  </th>
+                  <th style="width: 120px;">{{ "Actions" | localize }}</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let bed of beds | slice:(pageNumber - 1) * pageSize:(pageNumber * pageSize)">
+                  <td>{{ bed.bedNumber }}</td>
+                  <td>{{ getTypeString(bed.type) }}</td>
+                  <td>{{ gettypeString(bed.status) }}</td>
+                  <td>
+                    <button class="btn btn-sm btn-primary mr-1" (click)="editBed(bed)">
+                      <i class="fa fa-edit"></i>
                     </button>
-                  </div>
-                </div>
-              </div>
+                    <button class="btn btn-sm btn-danger" (click)="delete(bed)">
+                      <i class="fa fa-trash"></i>
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <!-- Simple Pagination -->
+            <div class="mt-3 d-flex justify-content-between">
+              <button class="btn btn-sm btn-secondary" [disabled]="pageNumber === 1" (click)="pageNumber = pageNumber - 1">
+                {{ "Previous" | localize }}
+              </button>
+
+              <span>{{ "Page" | localize }} {{ pageNumber }}</span>
+
+              <button
+                class="btn btn-sm btn-secondary"
+                [disabled]="(pageNumber * pageSize) >= totalItems"
+                (click)="pageNumber = pageNumber + 1">
+                {{ "Next" | localize }}
+              </button>
             </div>
-  
-            <div *ngIf="advancedFiltersVisible" class="card mb-0 mt-1">
-              <div class="card-body">
-                <form class="form-horizontal">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group row mb-0">
-                        <label class="col-md-3 col-form-label">
-                          {{ "IsActive" | localize }}
-                        </label>
-                        <div class="col-md-9 pt-2">
-                          <div class="custom-control custom-radio d-inline">
-                            <input
-                              type="radio"
-                              class="custom-control-input"
-                              id="isActiveAll"
-                              name="isActive"
-                              [(ngModel)]="isActive"
-                              [value]="undefined"
-                              checked
-                            />
-                            <label class="custom-control-label" for="isActiveAll">
-                              {{ "All" | localize }}
-                            </label>
-                          </div>
-                          <div class="custom-control custom-radio d-inline mx-3">
-                            <input
-                              type="radio"
-                              class="custom-control-input"
-                              id="isActiveActive"
-                              name="isActive"
-                              [(ngModel)]="isActive"
-                              [value]="true"
-                            />
-                            <label class="custom-control-label" for="isActiveActive">
-                              {{ "Yes" | localize }}
-                            </label>
-                          </div>
-                          <div class="custom-control custom-radio d-inline">
-                            <input
-                              type="radio"
-                              class="custom-control-input"
-                              id="isActivePassive"
-                              name="isActive"
-                              [(ngModel)]="isActive"
-                              [value]="false"
-                            />
-                            <label class="custom-control-label" for="isActivePassive">
-                              {{ "No" | localize }}
-                            </label>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="card-footer">
-                <button type="button" class="btn bg-blue" (click)="getDataPage(1)">
-                  {{ "Search" | localize }}
-                </button>
-                <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
-                  {{ "Clear" | localize }}
-                </button>
-              </div>
-            </div>
+
           </div>
-  
+        </div>
+      </div>
+
+      <!-- Tab 2: Placeholder for Chart -->
+      <div *ngIf="activeTab === 'status'">
+        <div class="card">
           <div class="card-body">
-            <div class="table-responsive">
-              <table class="table table-striped table-bordered" [busy]="isTableLoading">
-                <thead class="bg-light">
-                  <tr>
-                    <th (click)="changeSorting('bedNumber')" style="cursor: pointer;">
-                      {{ "BedNumber" | localize }}
-                      <i
-                        class="ml-1 fas"
-                        [ngClass]="{
-                          'fa-arrow-up text-primary': sorting === 'bedNumber asc',
-                          'fa-arrow-down text-primary': sorting === 'bedNumber desc',
-                          'fa-sort text-muted': sorting !== 'bedNumber asc' && sorting !== 'bedNumber desc'
-                        }"
-                      ></i>
-                    </th>
-                    <th (click)="changeSorting('type')" style="cursor: pointer;">
-                      {{ "BedType" | localize }}
-                      <i
-                        class="ml-1 fas"
-                        [ngClass]="{
-                          'fa-arrow-up text-primary': sorting === 'type asc',
-                          'fa-arrow-down text-primary': sorting === 'type desc',
-                          'fa-sort text-muted': sorting !== 'type asc' && sorting !== 'type desc'
-                        }"
-                      ></i>
-                    </th>
-                    <th (click)="changeSorting('status')" style="cursor: pointer;">
-                      {{ "BedStatus" | localize }}
-                      <i
-                        class="ml-1 fas"
-                        [ngClass]="{
-                          'fa-arrow-up text-primary': sorting === 'status asc',
-                          'fa-arrow-down text-primary': sorting === 'status desc',
-                          'fa-sort text-muted': sorting !== 'status asc' && sorting !== 'status desc'
-                        }"
-                      ></i>
-                    </th>
-                    <th style="width: 310px;">{{ "Actions" | localize }}</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr
-                    *ngFor="
-                      let bed of beds
-                        | paginate: {
-                            id: 'server',
-                            itemsPerPage: pageSize,
-                            currentPage: pageNumber,
-                            totalItems: totalItems
-                          }
-                    "
-                  >
-                    <td>{{ bed.bedNumber }}</td>
-                    <td>{{ getTypeString(bed.type)  }}</td>
-                    <td>{{ gettypeString(bed.status)}}</td>
-                    <td>
-                      <button type="button" class="btn btn-sm bg-secondary" (click)="editBed(bed)">
-                        <i class="fas fa-pencil-alt"></i>
-                        {{ "Edit" | localize }}
-                      </button>
-                      <button type="button" class="btn btn-sm bg-danger mx-2" (click)="delete(bed)">
-                        <i class="fas fa-trash"></i>
-                        {{ "Delete" | localize }}
-                      </button>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-  
-          <div class="card-footer table-card-footer bg-light border-top">
-            <div class="row">
-              <div class="col-sm-4 col-12 text-sm-left text-center">
-                <button class="btn btn-secondary" (click)="refresh()">
-                  <i class="fas fa-redo-alt"></i>
-                </button>
-              </div>
-              <div class="col-sm-4 col-12 text-center">
-                <p class="mb-0 my-2">
-                  {{ "TotalRecordsCount" | localize: totalItems }}
-                </p>
-              </div>
-              <div class="col-sm-4 col-12">
-                <div class="float-sm-right m-auto">
-                  <abp-pagination-controls id="server" (pageChange)="getDataPage($event)">
-                  </abp-pagination-controls>
-                </div>
-              </div>
+            <h5>{{ "Bed Status Distribution" | localize }}</h5>
+            <div style="max-width: 500px; margin: 0 auto;">
+              <canvas
+                baseChart
+                [datasets]="bedStatusChartData"
+                [labels]="bedStatusChartLabels"
+                [options]="bedStatusChartOptions"
+                [type]="bedStatusChartType">
+              </canvas>
             </div>
           </div>
         </div>
       </div>
-    </section>
-  </div>
-  
+    </div>
+  </section>
+</div>
