--- a/Practice_BoilerPlate/8.4.0/angular/src/app/bed/bed.component.html
+++ b/Practice_BoilerPlate/8.4.0/angular/src/app/bed/bed.component.html
@@ -113,14 +113,38 @@
             <table class="table table-striped table-bordered" [busy]="isTableLoading">
               <thead class="bg-light">
                 <tr>
-                  <th (click)="changeSorting('bedNumber')" style="cursor:pointer">
+                  <th (click)="changeSorting('name')" style="cursor: pointer;">
                     {{ "Bed Number" | localize }}
+                    <i
+                      class="ml-1 fas"
+                      [ngClass]="{
+                        'fa-arrow-up text-primary': sorting === 'name asc',
+                        'fa-arrow-down text-primary': sorting === 'name desc',
+                        'fa-sort text-muted': sorting !== 'name asc' && sorting !== 'name desc'
+                      }"
+                    ></i>
                   </th>
-                  <th (click)="changeSorting('type')" style="cursor:pointer">
+                  <th (click)="changeSorting('name')" style="cursor: pointer;">
                     {{ "Type" | localize }}
+                    <i
+                      class="ml-1 fas"
+                      [ngClass]="{
+                        'fa-arrow-up text-primary': sorting === 'name asc',
+                        'fa-arrow-down text-primary': sorting === 'name desc',
+                        'fa-sort text-muted': sorting !== 'name asc' && sorting !== 'name desc'
+                      }"
+                    ></i>
                   </th>
-                  <th (click)="changeSorting('status')" style="cursor:pointer">
+                  <th (click)="changeSorting('name')" style="cursor: pointer;">
                     {{ "Status" | localize }}
+                    <i
+                      class="ml-1 fas"
+                      [ngClass]="{
+                        'fa-arrow-up text-primary': sorting === 'name asc',
+                        'fa-arrow-down text-primary': sorting === 'name desc',
+                        'fa-sort text-muted': sorting !== 'name asc' && sorting !== 'name desc'
+                      }"
+                    ></i>
                   </th>
                   <th style="width: 250px;">{{ "Actions" | localize }}</th>
                 </tr>
