--- a/Practice_BoilerPlate/8.4.0/angular/src/app/patient/patient.component.html
+++ b/Practice_BoilerPlate/8.4.0/angular/src/app/patient/patient.component.html
@@ -10,6 +10,10 @@
               <i class="fa fa-plus-square"></i>
               {{ "Create" | localize }}
             </button>
+            <button class="btn btn-success ml-2" (click)="exportToExcel()">
+    <i class="fa fa-file-excel"></i>
+    {{ "ExportToExcel" | localize }}
+  </button>
           </div>
         </div>
       </div>
